# sweep_design

./: .gitignore  README.en.md  README.md  README.ru.md  manual.ipynb  pyproject.toml  requirements.txt
compose_signals/: c_relation.py  c_signal.py  c_sweep.py  c_uncalcsweep.py
compose_signals/defaults/: methods.py
documentation/sweep_design/: index.html
examples/: code_zinger.ipynb  general_view.ipynb  m_sequence.ipynb  m_sequence.py  manual.ipynb  pilot_rm_bp_view.ipynb  source.py  source_view.ipynb  sweep_view.ipynb
examples/pilot_rm_bp_files/: bp.mat  pilot.mat  rm.mat
functions/: f_emd.py  func_f_t.py
header_signals/: base_header.py  relation_header.py  signal_header.py  sweep_header.py  uncalcsweep_header.py
header_signals/defaults/: methods.py  names.py
header_signals/test/: test_header.py
io_data/file/: mat_file.py
io_data/view/: base_view.py  config_view.py  widget_bokeh_view.py  widget_pyplot_view.py  widget_tools.py
math_signals/: math_relation.py  math_signal.py  math_sweep.py  math_uncalcsweep.py
math_signals/defaults/: base_structures.py  methods.py  sweep_methods.py
math_signals/test/: test_relation.py  test_signal.py  test_sweep.py
sweep_design/: __init__.py
sweep_design/config/: __init__.py  config.py  named_config.py  sweep_config.py
sweep_design/dataio/: __init__.py
sweep_design/math_signals/: __init__.py  math_relation.py  math_signal.py  math_sweep.py  math_uncalcsweep.py  x_axis.py
sweep_design/named_signals/: __init__.py  del_config.py  (+6 more)
test/: test_relation.py  test_signal.py
viewrelation/: __init__.py  view.py
(+179 files in other folders)
